Updated right side

--- a/MealPreppers/MealPreppers/Views/Home/Index.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index.cshtml
@@ -16,7 +16,6 @@
     </div>
     <div class="col-md-2" id="IndexRightSide">
         <h2>Right Side</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        @Html.Partial("~/Views/Home/Index/Right/_RightDetailsPanel.cshtml")
     </div>
 </div>
