LeftPanel In Index

--- a/MealPreppers/MealPreppers/Views/Home/Index.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index.cshtml
@@ -5,8 +5,7 @@
 <div class="row">
     <div class="col-md-2" id="IndexLeftSide">
         <h2>Left Side</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        @Html.Partial("~/Views/Home/Index/Left/_leftTopPanel.cshtml")
 
     </div>
     <div class="col-md-8">
