Adding partial view to index

--- a/MealPreppers/MealPreppers/Views/Home/Index.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index.cshtml
@@ -11,8 +11,7 @@
     </div>
     <div class="col-md-8">
         <h2>Middle Side</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        @Html.Partial("~/Views/Home/Index/Left/_GridView.cshtml")
     </div>
     <div class="col-md-2" id="IndexRightSide">
         <h2>Right Side</h2>
