--- a/MealPreppers/MealPreppers/Content/Site.css
+++ b/MealPreppers/MealPreppers/Content/Site.css
@@ -22,3 +22,22 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*************scroll bar**************/
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #0F0F2C;
+    border-radius: 10px;
+}
