--- a/MealPreppers/MealPreppers/Views/Home/Index/Right/_RightDetailsPanel.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Right/_RightDetailsPanel.cshtml
@@ -1,3 +1,45 @@
-﻿<h1>Right Side</h1>
-<h1>Right Side</h1>
-<h1>Right Side</h1>
+﻿<link rel="stylesheet" type="text/css" href="~/Content/CustomCss/Index/RightDetailsView/RightDetailsSection.css" />
+<link rel="stylesheet" type="text/css" href="~/Content/CustomCss/Shared/SharedClasses.css" />
+
+<div id="RightSection" class="SectionBackground">
+    <div id="DetailsImageContainer">
+        <img class="image" src="https://www.tripsavvy.com/thmb/LHqlrmfFjjA0iLUw2d2qrjlqu_o=/2121x1414/filters:fill(auto,1)/GettyImages-508469850-5c32728e4cedfd0001716190.jpg" />
+    </div>
+
+    <div id="DetailsContentContainer">
+        <div id="RightTitleContainer">
+            <h3 class="HeaderThirdFontColor">Assorted  Sushi</h3>
+            <p id="RightSideDetailsTXT">Sushi, a staple rice dish of Japanese cuisine, consisting of cooked rice flavoured with vinegar and a variety of vegetable, egg, or raw seafood garnishes and served cold.</p>
+        </div>
+    </div>
+
+    <div id="IngredientsContentContainer">
+        <h3 class="HeaderThirdFontColor">Ingredients</h3>
+        <ul>
+            <li>Salmon</li>
+            <li>Tuna</li>
+            <li>Yellow Tail</li>
+            <li>Rice</li>
+            <li>Sushi Vinegar</li>
+            <li>Vinegar</li>
+            <li>Sugar</li>
+            <li>Soy Sauce</li>
+        </ul>
+    </div>
+
+    <div id="HowToContentContainer">
+        <h3 class="HeaderThirdFontColor">How to</h3>
+        <ol>
+            <li>Place the seaweed on a bamboo mat, then cover the sheet of seaweed with an even layer of prepared sushi rice. Smooth gently with the rice paddle.</li>
+            <li>Layer salmon, cream cheese, and avocado on the rice, and roll it up tightly. Slice with a sharp knife, and enjoy with soy sauce.</li>
+            <li> Add your ingredients toward the center of the rice-covered nori. Don't overpack it. If you're making a roll with the rice on the outside, simply turn the nori over, placing it rice-side down on the rolling mat. Then add your ingredients to the top of the nori.</li>
+            <li>Gently lift the bottom of the mat up and over the sushi. Press and shape the ingredients into a tube. Roll with pressure so you get a firm roll.</li>
+            <li>Roll until just an inch of nori shows at the top. Seal the edge of the nori with a little cold water. Firm it up by squeezing the mat around the roll until it feels uniformly snug. Be careful not to squeeze so hard that the ingredients are smashed or come oozing out the sides. It's a fine line; with practice you'll get the feel of it.</li>
+            <li>Slice the sushi roll in half with a sharp knife on a cutting board. Then cut each half into thirds -- so you have 6 pieces of sushi. To get a nice clean cut, wet the knife with water each time you make a slice.</li>
+            <li>Line the slices of sushi up on platters or sushi plates. Enjoy with soy sauce, wasabi paste, and pickled ginger, and a little chopped daikon if you like.</li>
+            <li>Soy Sauce</li>
+        </ol>
+    </div>
+
+</div>
+
