split ingredient section into 2 columns

--- a/MealPreppers/MealPreppers/Views/Home/Index/Right/_RightDetailsPanel.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Right/_RightDetailsPanel.cshtml
@@ -15,7 +15,7 @@
 
     <div id="IngredientsContentContainer">
         <h3 class="HeaderThirdFontColor">Ingredients</h3>
-        <ul>
+        <ul id="IngredientList">
             <li>Salmon</li>
             <li>Tuna</li>
             <li>Yellow Tail</li>
