--- a/MealPreppers/MealPreppers/Content/CustomCss/Shared/SharedClasses.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Shared/SharedClasses.css
@@ -28,7 +28,16 @@ p {
     padding-bottom: 15px;
 }
 
-.image{
-    width:100%;
+#IngredientList {
+    -moz-column-count: 2;
+    -moz-column-gap: 0px;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 0px;
+    column-count: 2;
+    column-gap: 0px;
+}
+
+.image {
+    width: 100%;
     height: 100%;
 }
