Added HTML and CSS to Grid Homepage

--- a/MealPreppers/MealPreppers/Views/Home/Index/Middle/_GridView.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Middle/_GridView.cshtml
@@ -1,2 +1,11 @@
-﻿
-<h1>Hello!</h1>
+﻿<link rel="stylesheet" type="text/css" href="~/Content/CustomCss/Index/GridView/GridCss.css" />
+
+<div id="grid-layout">
+    <div class="grid-item">
+        <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/6/1/2/FNM_070112-Copy-That-Almost-Famous-Animal-Style-Burger-Recipe_s4x3.jpg.rend.hgtvcom.616.462.suffix/1382541460839.jpeg"
+             alt="burger"
+             class="item-picture" />
+        <h2>Pog Burger</h2>
+        <p>This burger is super easy to make and tastes super pog!</p>
+    </div>
+</div>
