--- a/MealPreppers/MealPreppers/Views/Home/Index/Middle/_GridView.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Middle/_GridView.cshtml
@@ -8,4 +8,26 @@
         <h2>Pog Burger</h2>
         <p>This burger is super easy to make and tastes super pog!</p>
     </div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    <div class="grid-item">POG</div>
+    
 </div>
