Began rough draft of "User Profile"
Made a rough draft of the User Profile.
Let me know what you think and if you think any big changes need to happen.

Also fixed a few bugs when only 1 or 2 items were in the grid, causing the items to not start at the top of the container and instead float around the bottom/middle.

--- a/MealPreppers/MealPreppers/Views/Home/Index/Middle/_GridView.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Middle/_GridView.cshtml
@@ -8,26 +8,30 @@
         <h2>Pog Burger</h2>
         <p>This burger is super easy to make and tastes super pog!</p>
     </div>
+    <div class="grid-item">DOG</div>
     <div class="grid-item">POG</div>
+    <div class="grid-item">FOG</div>
+    <div class="grid-item">SMOG</div>
+    <div class="grid-item">DOG</div>
     <div class="grid-item">POG</div>
+    <div class="grid-item">FOG</div>
+    <div class="grid-item">SMOG</div>
+    <div class="grid-item">DOG</div>
     <div class="grid-item">POG</div>
+    <div class="grid-item">FOG</div>
+    <div class="grid-item">SMOG</div>
+    <div class="grid-item">DOG</div>
     <div class="grid-item">POG</div>
+    <div class="grid-item">FOG</div>
+    <div class="grid-item">SMOG</div>
+    <div class="grid-item">DOG</div>
     <div class="grid-item">POG</div>
+    <div class="grid-item">FOG</div>
+    <div class="grid-item">SMOG</div>
+    <div class="grid-item">DOG</div>
     <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    <div class="grid-item">POG</div>
-    
+    <div class="grid-item">FOG</div>
+    <div class="grid-item">SMOG</div>
+
+
 </div>
