--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/GridView/GridCss.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/GridView/GridCss.css
@@ -8,6 +8,8 @@
     padding-bottom: 10px;
     border: 5px solid black;
     overflow-y: auto;
+    align-content: start;
+    
 }
 
 .grid-item {
@@ -16,7 +18,7 @@
     width: 90%;
     margin: auto;
     margin-bottom: 5px;
-    // background-color: aliceblue;
+    
     text-align: center;
     padding: 0px;
     overflow-y: auto;
