--- a/MealPreppers/MealPreppers/Views/Home/About.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/About.cshtml
@@ -1,7 +1,26 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿<div class="row">
+    <div class="col-md-2" id="IndexLeftSide">
+        @Html.Partial("~/Views/Home/Index/Left/_leftTopPanel.cshtml")
+        <div class="row">
+            <div class="col-md-2">
+                @Html.Partial("~/Views/Home/Index/Left/_leftBottomPanel.cshtml")
+            </div>
 
-<p>Use this area to provide additional information.</p>
+        </div>
+    </div>
+    <div class="col-md-8">
+        @Html.Partial("~/Views/Home/My Profile/Middle/_MyProfileGrid.cshtml")
+
+    </div>
+    <div class="col-md-2" id="IndexRightSide">
+        <div id="RightSideHeaderContainer">
+            <div id="HeaderImageContainer">
+                <img src="~/Content/Images/ricebowl.png" class="image" />
+            </div>
+            <h3 id="RightHeaderDetailFontOne" class="HeaderSecondaryFontColor">Yummy</h3>
+            <h3 class="HeaderFontColor">Details</h3>
+
+        </div>
+        @Html.Partial("~/Views/Home/Index/Right/_RightDetailsPanel.cshtml")
+    </div>
+</div>
