--- a/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
+++ b/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
@@ -21,8 +21,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("My Profile", "About", "Home")</li>
+                    <li>@Html.ActionLink("Discover", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Logout", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
