Reorganized Folder and file structure

--- a/MealPreppers/MealPreppers/Views/Home/MyProfile/MyProfile.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/MyProfile/MyProfile.cshtml
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="col-md-8">
-        @Html.Partial("~/Views/Home/My Profile/Middle/_MyProfileGrid.cshtml")
+        @Html.Partial("~/Views/Home/MyProfile/Middle/_MyProfileGrid.cshtml")
 
     </div>
     <div class="col-md-2" id="IndexRightSide">
