--- a/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
+++ b/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("My Profile", "About", "Home")</li>
+                    <li>@Html.ActionLink("My Profile", "MyProfile", "Home")</li>
                     <li>@Html.ActionLink("Discover", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Logout", "Contact", "Home")</li>
                 </ul>
