Created Login Page

--- a/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
+++ b/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("My Profile", "MyProfile", "Home")</li>
                     <li>@Html.ActionLink("Discover", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Logout", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Logout", "Login", "Home")</li>
                 </ul>
             </div>
         </div>
