--- a/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
+++ b/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("My Profile", "MyProfile", "Home")</li>
-                    <li>@Html.ActionLink("Discover", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Discover", "Discover", "Home")</li>
                     <li>@Html.ActionLink("Logout", "Login", "Home")</li>
                 </ul>
             </div>
