--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
@@ -1,8 +1,13 @@
-﻿#leftTopPanel{
+﻿@import url('../RightDetailsView/RightDetailsSection.css');
+#leftTopPanel{
     border:solid;
     border-color:black;
     border-width:5px;
+    height:500px;
+    overflow-y: auto;
 }
+
+
 .userImg{
     display:inline-block;
     width:50px;
