Added a "Friend Feed"
-Added Feed to navbar
-Added Feed partial and cshtml
-Added Feed CSS
-Added Feed Horizontal Scroll Script

--- a/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
+++ b/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("My Profile", "MyProfile", "Home")</li>
                     <li>@Html.ActionLink("Discover", "Discover", "Home")</li>
+                    <li>@Html.ActionLink("Feed", "Feed", "Home")</li>
                     <li>@Html.ActionLink("Logout", "Login", "Home")</li>
                 </ul>
             </div>
