--- a/MealPreppers/MealPreppers/Views/Home/Index/Left/_leftTopPanel.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Left/_leftTopPanel.cshtml
@@ -1,12 +1,19 @@
 ﻿@Styles.Render(("~/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css"))
 <div id="leftTopPanel">
-    <h2>Left Side</h2>
-    <div id="userImg">
-        <img src="https://pbs.twimg.com/profile_images/949787136030539782/LnRrYf6e_400x400.jpg" class="userImg" />
+    <div id="_leftTopHeader">
+        <div id="userImg">
+            <img src="https://pbs.twimg.com/profile_images/949787136030539782/LnRrYf6e_400x400.jpg" class="userImg" />
+        </div>
+        <h2>Challenger PogMa</h2>
+
     </div>
-    <a href="~/Views/Home/Contact.cshtml">Friends</a>
+    
+    <div class="friendsLink">
+        <a href="Home/Discover/Discover.cshtml">Friends</a>
+    </div>
     <div id="searchBar">
         <input type="text" placeholder="Search Bar" />
+        <button type="submit" name="search">Search</button>
     </div>
     <div id="filterForUnwantedFood">
         <button class="btn active" onclick="filterSelection('all')">Show All Food</button>
