Replacing Partial View CSS for topleft

--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
@@ -7,13 +7,13 @@
 
 */
 
-#leftTopPanel{
-    border:solid;
-    border-color:black;
-    border-width:5px;
-    height:500px;
+#leftTopPanel {
+    border: solid;
+    border-color: black;
+    border-width: 5px;
+    height: 500px;
     overflow-y: auto;
-    
+    position: relative;
 }
 #_leftTopHeader {
     display: flex;
@@ -38,13 +38,73 @@
 }
 #filterForUnwantedFood{
     padding-top:20px;
+    
 }
-.btn {
+.noFood {
     background: coral;
-    color:white;
+    color: white;
+    margin-bottom: 5px;
 }
 .friendsLink{
     font-size:30px;
     padding-bottom:10px;
+}
+#addRecipeButton {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+}
+
+
+
+
+/*Modal PartialView CSS*/
+.close {
+    color: blue;
+}
+
+.cookTimeContainer {
+    display: flex;
+}
+
+.cookTime {
+    margin-left: 10px;
+}
+
+#modal-input {
+    margin-right: 0px;
+    border-radius: 0px 0px 5px 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border: none;
+}
+
+form {
+    align-items: center;
+    width: 500px;
+}
+
+.modal-body {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+textarea {
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+#recipeLabel {
+    background-color: coral;
+    margin-bottom: 0;
+    color: white;
+    border-radius: 5px 5px 0px 0px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border: none;
+    margin-top: 10px;
 }
 
