--- a/MealPreppers/MealPreppers/Views/Home/Index/Left/_leftTopPanel.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Left/_leftTopPanel.cshtml
@@ -16,12 +16,12 @@
         <button type="submit" name="search">Search</button>
     </div>
     <div id="filterForUnwantedFood">
-        <button  class="noFood" onclick="filterSelection('all')">Show All Food</button>
-        <button  class="noFood" onclick="filterSelection('No Peanuts')">No Peanuts</button>
-        <button  class="noFood" onclick="filterSelection('No Dairy')">No Dairy</button>
-        <button  class="noFood" onclick="filterSelection('No Meat')">No Meat</button>
-        <button  class="noFood" onclick="filterSelection('No Gluton')">No Gluton</button>
-        <button  class="noFood" onclick="filterSelection('No Fruits')">No Fruits</button>
+        <button  id ="noFood" type ="button" class="btn active" onclick="filterSelection('all')">Show All Food</button>
+        <button  id ="noFood" type ="button" class="btn" onclick="filterSelection('No Peanuts')">No Peanuts</button>
+        <button  id ="noFood" type ="button" class="btn" onclick="filterSelection('No Dairy')">No Dairy</button>
+        <button  id ="noFood" type ="button" class="btn" onclick="filterSelection('No Meat')">No Meat</button>
+        <button  id ="noFood" type ="button" class="btn" onclick="filterSelection('No Gluton')">No Gluton</button>
+        <button  id ="noFood" type ="button" class="btn" onclick="filterSelection('No Fruits')">No Fruits</button>
 
     </div>
 
