--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/BottomLeftPanel.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/BottomLeftPanel.css
@@ -1,3 +1,29 @@
 ﻿#ownedIngredients {
-    color:darkblue;
+    border: solid;
+    border-color: black;
+    border-width: 5px;
+    height:500px;
+    width:100%;
+    overflow-y:auto;
+
 }
+#bottomHeader {
+    display: flex;
+    padding-bottom: 10px;
+    background: #0F0F2C;
+    color: #27A761;
+}
+#haveIngredientsSearch{
+    padding-top:20px;
+    padding-bottom:20px;
+}
+
+#filterHaveIngedients{
+    padding-top:20px;
+}
+#haveFood {
+    background: coral;
+    color: white;
+    margin-bottom: 5px;
+}
+
