--- a/MealPreppers/MealPreppers/Views/Home/Index/Index.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Index.cshtml
@@ -7,12 +7,9 @@
 <div class="row">
     <div class="col-md-2 col-xs-12" id="IndexLeftSide">
         @Html.Partial("~/Views/Home/Index/Left/_leftTopPanel.cshtml")
-        <div class="row">
-            <div class="col-md-2">
+            <div>
                 @Html.Partial("~/Views/Home/Index/Left/_leftBottomPanel.cshtml")
             </div>
-
-        </div>
     </div>
     <div class="col-md-8 col-xs-12" >
 
