--- a/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
+++ b/MealPreppers/MealPreppers/Views/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
+    <div class="container-fluid navbar-inverse navbar-fixed-top">
+        <div>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
