--- a/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
@@ -44,7 +44,7 @@
 
 
                         <div class="modal-body col-xs-12">
-                            <form>
+                            <form id="add-recipe-modal-form" action="/Home/" type="post">
                                 <div class="col-md-12 col-xs-12">
                                     <Label id="recipeLabel" class="form-control">Recipe Title</Label>
                                     <input value="" maxlength="40" id="modal-input-title" type="text" name="RecipeTitle" class="form-control" placeholder="..."/>
