turbo smurfed - add modal to database complete
- made it so i could pass an object to the controller by also creating an "AddRecipe" model

- added a resultmessage model

- passed the object from the controller to the datafactory "SaveRecipe" to of which sends the object to the database

- had to hook up the webconfig and database and all that stuff so i could actualy send to the database

- finally sent to data base successfully

-poggers

--- a/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
@@ -44,18 +44,16 @@
 
 
                         <div class="modal-body col-xs-12">
-                            <form id="add-recipe-modal-form" action="/Home/" type="post">
+                            <form id="add-recipe-modal-form" @*action="Home/AddRecipe"*@ type="post">
                                 <div class="col-md-12 col-xs-12">
                                     <Label id="recipeLabel" class="form-control">Recipe Title</Label>
-                                    <input value="" maxlength="40" id="modal-input-title" type="text" name="recipeTitle" class="form-control" placeholder="..." />
+                                    <input value="" maxlength="40" id="modal-input-title" type="text" name="title" class="form-control" placeholder="..." />
                                 </div>
 
                                 <div class="col-md-12 col-xs-12">
                                     <Label id="recipeLabel" class="form-control">Recipe Description</Label>
-                                    <input id="modal-description-preview" type="text" name="recipeDesc" class="form-control" placeholder="..." />
+                                    <input id="modal-description-preview" type="text" name="description" class="form-control" placeholder="..." maxlength="40" />
                                 </div>
-
-
 
                                 <div class="col-md-12 col-xs-12">
                                     <Label id="recipeLabel" class="form-control">Ingredients</Label>
