Updated Modal to Auto-Update after Submit

--- a/MealPreppers/MealPreppers/Views/Home/Index/Index.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Index.cshtml
@@ -11,7 +11,7 @@
                 @Html.Partial("~/Views/Home/Index/Left/_leftBottomPanel.cshtml")
             </div>
     </div>
-    <div class="col-md-8 col-xs-12" >
+    <div id="middleGrid" class="col-md-8 col-xs-12" >
 
         @Html.Partial("~/Views/Home/Index/Middle/_GridView.cshtml")
     </div>
