--- a/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
@@ -90,7 +90,7 @@
                                     <input id="modal-preview-image" type="url" name="imageURL" class="form-control" placeholder="..." />
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="Modalclose">Close</button>
                                     <button type="submit" class="btn btn-primary" id="modalSubmitButton">Save changes</button>
                                 </div>
 
