added alert to modal

--- a/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
@@ -15,9 +15,15 @@
                         </button>
                     </div>
 
+                    <div id="modalAlert" class="alert alert-success hide" role="alert">
+                        This is a success alert—check it out!
+                    </div>
+
                     <div class="modal-preview-container ">
                         @*Display what model would look like*@
                         <div class="modal-preview col-xs-12">
+
+
 
                             <div class="grid-item">
                                 <div class="card" style="width: 100%;">
@@ -67,19 +73,19 @@
                                     <textarea rows="5" class="form-control" name="instructions" placeholder="..."></textarea>
                                 </div>
 
-                                <div class="col-md-4 col-xs-12">
+                                <div class="col-md-6 col-xs-12">
                                     <Label id="recipeLabel" class="form-control">Prep Time (Minutes)</Label>
                                     <input id="modal-input" type="number" name="prepTime" class="form-control" placeholder="..." />
 
                                 </div>
 
-                                <div class="col-md-4 col-xs-12">
+                                <div class="col-md-3 col-xs-12">
                                     <Label id="recipeLabel" class="form-control">Servings</Label>
 
                                     <input id="modal-input" type="number" name="servings" class="form-control" placeholder="..." />
                                 </div>
 
-                                <div class="col-md-4 col-xs-12">
+                                <div class="col-md-3 col-xs-12">
                                     <Label id="recipeLabel" class="form-control">Calories</Label>
 
                                     <input id="modal-input" type="number" name="calories" class="form-control" placeholder="..." />
@@ -97,7 +103,7 @@
                             </form>
                         </div>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
