Disable Button on Submit for 5 secs

--- a/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Index/Left/_addRecipePartialModal.cshtml
@@ -8,16 +8,19 @@
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
+                    
                     <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Add a Recipe:</h5>
+
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
+                        <div id="modalAlert" class="alert alert-success hide" role="alert">
+                            Recipe Saved: Lets freaking go!
+                        </div>
                     </div>
 
-                    <div id="modalAlert" class="alert alert-success hide" role="alert">
-                        This is a success alert—check it out!
-                    </div>
+
 
                     <div class="modal-preview-container ">
                         @*Display what model would look like*@
