--- a/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
+++ b/MealPreppers/MealPreppers/Content/CustomCss/Index/leftPartialViews/leftTopPanel.css
@@ -141,3 +141,11 @@ textarea {
     margin-bottom: 200px;
     
 }
+
+#modalAlert{
+    text-align: center;
+    /*display: flex;
+    justify-content: center;
+    align-content: center;*/
+    margin-bottom: 0px;
+}
