--- a/MealPreppers/MealPreppers/Views/Home/Discover/_DiscoverPartial.cshtml
+++ b/MealPreppers/MealPreppers/Views/Home/Discover/_DiscoverPartial.cshtml
@@ -15,14 +15,17 @@
 
 
         <div class="foodCards">
+            <div id="foodName">
+                Recipe: Ice Cream is so very good.
+            </div>
+            <div id="CookTime">
+                Cooking Time: 30 minutes
+            </div>
+        </div>
             <div class="photo">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg/1200px-Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg"/>
             </div>
-            <div id="foodName">
-                <p>Ice Cream</p>
-            </div>
-            <div id="CookTime">30 minutes</div>
-        </div>
+            
 
         <div class="buttons">
                 <button id="butt-nope">X</button>
